2019-10-14  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92084
	* semantics.c (handle_omp_array_sections_1): Temporarily disable
	-fstrong-eval-order also for in_reduction and task_reduction clauses.

	* parser.c (cp_parser_omp_all_clauses): Change bool NESTED_P argument
	into int NESTED, if it is 2, diagnose missing commas in between
	clauses.
	(cp_parser_omp_context_selector): Pass 2 as last argument to
	cp_parser_omp_all_clauses.

2019-10-12  Jakub Jelinek  <jakub@redhat.com>

	* parser.c (cp_parser_omp_context_selector): Improve error recovery.
	For simd properties, put them directly into TREE_VALUE.
	(cp_finish_omp_declare_variant): Add "omp declare variant base"
	attribute rather than "omp declare variant".

2019-10-11  Marek Polacek  <polacek@redhat.com>

	PR c++/92049 - extra error with -fchecking=2.
	* pt.c (build_non_dependent_expr): Call fold_non_dependent_expr
	with tf_none.

2019-10-11  Paolo Carlini  <paolo.carlini@oracle.com>

	* typeck.c (cp_build_binary_op): Do not handle RROTATE_EXPR and
	LROTATE_EXPR.
	* constexpr.c (cxx_eval_constant_expression): Likewise.
	(potential_constant_expression_1): Likewise.
	* pt.c (tsubst_copy): Likewise.

2019-10-11  Jason Merrill  <jason@redhat.com>

	* decl2.c (mark_used): Don't clobber DECL_SOURCE_LOCATION on
	explicitly defaulted functions.
	* method.c (synthesize_method): Likewise.

2019-10-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/91987
	* decl2.c (grok_array_decl): For -fstrong-eval-order, when array ref
	operands have been swapped and at least one operand has side-effects,
	revert the swapping before calling build_array_ref.
	* typeck.c (cp_build_array_ref): For non-ARRAY_TYPE array ref with
	side-effects on the index operand, if -fstrong-eval-order use
	save_expr around the array operand.
	(cp_build_binary_op): For shifts with side-effects in the second
	operand, wrap first operand into SAVE_EXPR and evaluate it before
	the shift.
	* semantics.c (handle_omp_array_sections_1): Temporarily disable