@@ -1,3 +1,13 @@
+2019-10-14  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* g++.dg/cpp0x/constexpr-union5.C: Test location(s) too.
+	* g++.dg/diagnostic/bitfld2.C: Likewise.
+	* g++.dg/ext/anon-struct1.C: Likewise.
+	* g++.dg/ext/anon-struct6.C: Likewise.
+	* g++.dg/ext/flexary19.C: Likewise.
+	* g++.dg/ext/flexary9.C: Likewise.
+	* g++.dg/template/error17.C: Likewise.
+
 2019-10-14  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/92084
